--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
             </table>
           </div>
             <div id="analytics" class = "fiveSixth left analysis">
-              <div class="chart left">
+              <div class="chart teamChart left">
                 <h2>Visual Overview of Team Matches</h2>
                 <svg class="svgChart" id="svg1"></svg>
               </div>
@@ -1151,6 +1151,9 @@
 
   </tbody>
 </table>
+<div class="chart elementOverview left">
+                <svg class="svgChart full" id="svg2"></svg>
+              </div>
 <div class="clear"></div>
           </div>
         </div>
