Added test files and simple cumulitive ranking

--- a/index.html
+++ b/index.html
@@ -1097,6 +1097,37 @@
         </div>
       </div>
         <div id="overviewTab" class="tabs content contentTabs">
+          <h1 id="">Top Teams</h1>
+          <p>
+            Top teams calculates how many scoring elements the team is able to achieve throughout all matches. It does not take into account teams that have run more matches or the relative point values/difficulty of the various missions.
+          </p>
+          <div class="topTeams auto third  left">
+            <h2>Autonomous</h2>
+          <div id="autoBox">
+
+          </div>
+          </div>
+
+          <div class="topTeams driver third left">
+            <h2>Tele-Op</h2>
+            <div id="teleBox">
+
+            </div>
+          </div>
+
+          <div class="topTeams endGame third left">
+            <h2>End Game</h2>
+            <div id="endBox">
+
+            </div>
+          </div>
+          <div class="topTeams total full left">
+            <h2>Overall</h2>
+            <div id="total">
+
+            </div>
+          </div>
+
           <div class="fiveSixth ">
             <h1 id="">Scoring Element Overview</h1>
             <table id="scoringOverview">
@@ -1135,7 +1166,7 @@
               </thead>
             </table>
             <br />
-<h1 id="elementHeader"></h1>
+<h2 id="elementHeader"></h2>
 <table id="elementOverview" class="sixth left">
   <thead>
     <tr>
